--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ intel-openmp==2021.4.0
 jax==0.4.29
 jaxlib==0.4.29
 Jinja2==3.1.4
+joblib==1.4.2
 kiwisolver==1.4.5
 MarkupSafe==2.1.5
 matplotlib==3.9.0
@@ -30,10 +31,12 @@ pycparser==2.22
 pyparsing==3.1.2
 python-dateutil==2.9.0.post0
 PyYAML==6.0.1
+scikit-learn==1.5.0
 scipy==1.13.1
 six==1.16.0
 sounddevice==0.4.7
 sympy==1.12.1
 tbb==2021.12.0
+threadpoolctl==3.5.0
 torch==2.3.1
 typing_extensions==4.12.2
