Lower Frequency Range Not Working | Impove RGB

--- a/config.yaml
+++ b/config.yaml
@@ -2,14 +2,14 @@ TARGET_RESOLUTION:
   - 640 
   - 480
 
-TARGET_FRAME_RATE: 30
+TARGET_FRAME_RATE: 60
 
-BPF_LOWCUT: 1
+BPF_LOWCUT: 0.75
 
-BPF_HIGHCUT: 3
+BPF_HIGHCUT: 2
 
 BPF_ORDER: 4
 
-MEDIAN_FILTER_SIZE: 3
+MEDIAN_FILTER_SIZE: 5
 
-VIDEO: 0
+VIDEO: "dataset/aniket_HR.mp4"
